<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/wrapper_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher"
                android:layout_marginRight="10dp"/>
            <TextView android:text="@string/app_name" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:id="@+id/logo"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView android:text="@string/notification_settings" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/notification_settings"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:id="@+id/alarm_appointments"
                        android:onClick="updateCheckBoxValue"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="60dp"
                        android:clickable="true"
                        android:text="01:00"
                        android:id="@+id/time_before_wake_up"
                        android:onClick="showTimePickerDialog"
                        android:focusable="false"/>

                    <TextView android:text="@string/time_before_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:id="@+id/alarm_no_appointments"
                        android:onClick="updateCheckBoxValue"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="60dp"
                        android:clickable="true"
                        android:text="10:00"
                        android:id="@+id/latest_wake_up_time"
                        android:onClick="showTimePickerDialog"
                        android:focusable="false"/>

                    <TextView android:text="@string/latest_wake_up" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/textView"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:id="@+id/notify_before_sleep"
                        android:onClick="updateCheckBoxValue"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="60dp"
                        android:clickable="true"
                        android:text="01:00"
                        android:id="@+id/time_before_sleep_input"
                        android:onClick="showTimePickerDialog"
                        android:focusable="false"/>

                    <TextView android:text="@string/time_before_sleep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/alarm_tone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="90dp"/>
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:onClick="showAlarmTonePickerDialog"
                            android:id="@+id/alarm_tone"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:scrollbars="none"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/vibrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="90dp"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:onClick="updateCheckBoxValue"
                            android:id="@+id/vibrate"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/snooze_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="90dp"/>
                        <EditText
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="09:00"
                            android:focusable="false"
                            android:clickable="true"
                            android:id="@+id/snooze_time"
                            android:onClick="showTimePickerDialog"/>
                        <TextView
                            android:text="min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_alarm"
                android:background="@drawable/button_blue"
                android:textColor="#E0E0EF"
                android:layout_gravity="center"
                android:onClick="previewAlarm"
                android:id="@+id/preview_button"
                />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_to_wake_up"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarm_monday"
                    android:onClick="updateCheckBoxValue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday_abbr"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarm_tuesday"
                    android:onClick="updateCheckBoxValue" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday_abbr"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarm_wednesday"
                    android:onClick="updateCheckBoxValue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday_abbr"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarm_thursday"
                    android:onClick="updateCheckBoxValue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday_abbr"/>
            </LinearLayout></LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_friday"
                android:onClick="updateCheckBoxValue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday_abbr"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_saturday"
                android:onClick="updateCheckBoxValue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday_abbr"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_sunday"
                android:onClick="updateCheckBoxValue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday_abbr"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
