<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jkarlsson.sleeppal.AlarmActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher"
                android:layout_marginRight="10dp"/>
            <TextView android:text="@string/app_name" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:id="@+id/logo"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/alarmclock"
            android:id="@+id/alarm_clock"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_morning"
            android:textSize="35dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:00 SomeEvent"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:id="@+id/upcoming_event"
                />
            </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:id="@+id/dismiss"
            android:onClick="dismissAlarm"
            android:background="@drawable/button_blue"
            android:textColor="#E0E0EF"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/snooze"
            android:onClick="snoozeAlarm"
            android:background="@drawable/button_blue"
            android:textColor="#E0E0EF"
            android:text="@string/snooze"/>

    </LinearLayout>

</ScrollView>